--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     });
   </script>
 
-  <link href="./theme/homepage/index.css" rel="stylesheet" type="text/css">
+  <link href="./theme/homepage.css" rel="stylesheet" type="text/css">
   <meta name="google-site-verification" content="0oMsL0u4yA5lCbjR9j9zo47uOMxPMF1XHKs-toT84TA">
 
 </head>
@@ -47,11 +47,11 @@
               </div>
             </td>
             <td width="300" align="right" valign="top">
-              <a href="./sitemap.html">
+              <a href="./info/index.html#sitemap">
                 <img src="./assets/homepage/sitemap.png" width="119" height="50" alt="サイトマップ" hspace="8">
               </a>
 
-              <a href="./contact.html">
+              <a href="./info/index.html#contact">
                 <img src="./assets/homepage/mail.png" width="120" height="50" alt="お問い合わせ" hspace="8">
               </a>
             </td>
@@ -69,7 +69,7 @@
         </a>
 
         <!-- tab2 -->
-        <a href="./info.html">
+        <a href="./info/index.html">
           <img border="0" src="./assets/homepage/info.png" width="114" height="29" alt="会社案内" hspace="25">
         </a>
 
@@ -168,14 +168,14 @@
                 <br>
                 <a href="./saiyou.html">採用</a>を更新しました。
                 <br>
-                <a href="./access.html">アクセス</a>を更新しました。
+                <a href="./info/index.html#access">アクセス</a>を更新しました。
                 <br>
-                <a href="./newsbacknamber.html">BACKNUMBER</a>を更新しました。
+                <a href="./info/index.html#newsbacknamber">BACKNUMBER</a>を更新しました。
               </p>
             </div>
             <!-- バックナンバー -->
             <p>▶
-              <a href="./newsbacknamber.html">BACKNUMBER</a>
+              <a href="./info/index.html#newsbacknamber">BACKNUMBER</a>
               <br>
               <br>
 
@@ -188,7 +188,7 @@
               <img src="./assets/homepage/ekura(1).png" width="500" height="170" alt="子どもに見せたいアニメを、心を込めて、てづくりで。エクラアニマルではテレビシリーズだけでなく、自主制作アニメづくりや地域活動への参加、無料出張上映会などを積極的に行っています。">
             </p>
             <div style="text-align:right">
-              <a href="./info.html">
+              <a href="./info/index.html">
                 <img src="./assets/homepage/info(1).png" width="170" height="47" alt="会社案内を見る">
               </a>
             </div>
@@ -336,11 +336,11 @@
             <br>
 
             <p>
-              <a href="./access.html">
+              <a href="./info/index.html#access">
                 <img src="./assets/homepage/tizu.png" width="200" height="65" alt="地図">
               </a>
               <br> ▶︎
-              <a href="./access.html">地図はこちら</a>
+              <a href="./info/index.html#access">地図はこちら</a>
               <br>
               <img src="./assets/homepage/adderss.png" width="200" height="134" alt="addres" vspace="10">
               <br>
