--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
         <!-- tab3 -->
-        <a href="./katudou.html">
+        <a href="./katudou/index.html">
           <img border="0" src="./assets/homepage/katudou.png" width="53" height="27" alt="活動" hspace="25">
         </a>
 
@@ -197,23 +197,23 @@
             <hr>
             <br>
 
-            <a href="./katudou/charago.html">
+            <a href="./katudou/index.html#charago">
               <img src="./assets/homepage/ibe.png" width="98" height="200" alt="イベント">
             </a>
-            <a href="./katudou/eco.html">
+            <a href="./katudou/index.html#eco">
               <img src="./assets/homepage/eco.png" width="98" height="200" alt="エコキャップ">
             </a>
-            <a href="./katudou/gomi.html">
+            <a href="./katudou/index.html#gomi">
               <img src="./assets/homepage/gomi.png" width="98" height="200" alt="ゴミ拾い">
             </a>
-            <a href="./katudou/movie.html">
+            <a href="./katudou/index.html#movie">
               <img src="./assets/homepage/zyouei.png" width="98" height="200" alt="上映会">
             </a>
-            <a href="./katudou/katudouetc.html">
+            <a href="./katudou/index.html#katudouetc">
               <img src="./assets/homepage/ken.png" width="98" height="200" alt="献血">
             </a>
             <div style="text-align:right">
-              <a href="./katudou.html">
+              <a href="./katudou/index.html#index">
                 <img src="./assets/homepage/katudou(1).png" width="170" height="47" alt="活動を見る">
               </a>
             </div>
@@ -270,11 +270,11 @@
             <hr>
             <br>
 
-            <a href="./katudou/anime.html">
+            <a href="./katudou/index.html#anime">
               <img src="./assets/homepage/syoukai.png" width="500" height="276" alt="企業CM　ブライダルアニメーション　イベントオープニング　地域活動紹介">
             </a>
             <div style="text-align:right">
-              <a href="./katudou/anime.html">
+              <a href="./katudou/index.html#anime">
                 <img src="./assets/homepage/uketamawari.png" width="170" height="47" alt="制作承ります">
               </a>
             </div>
@@ -399,19 +399,19 @@
               <td>
                 <p>
                   <font size="-2">
-                    <a href="./katudou/kazenoyouni.html">＋風のように</a>
+                    <a href="./katudou/index.html#kazenoyouni">＋風のように</a>
                     <br>
-                    <a href="./katudou/daruma.html">＋だるまちゃんシリーズ</a>
+                    <a href="./katudou/index.html#daruma">＋だるまちゃんシリーズ</a>
                     <br>
-                    <a href="./katudou/fuitin.html">＋フイチンさん</a>
+                    <a href="./katudou/index.html#fuitin">＋フイチンさん</a>
                     <br>
-                    <a href="./katudou/charadoku.html">＋キャラ丸くんとドク丸くん</a>
+                    <a href="./katudou/index.html#charadoku">＋キャラ丸くんとドク丸くん</a>
                     <br>
-                    <a href="./katudou/kappa.html">＋かっぱのすりばち</a>
+                    <a href="./katudou/index.html#kappa">＋かっぱのすりばち</a>
                     <br>
-                    <a href="./katudou/kurumi.html">＋くるくるクルミちゃん</a>
+                    <a href="./katudou/index.html#kurumi">＋くるくるクルミちゃん</a>
                     <br>
-                    <a href="./katudou/sakura.html">＋さくらとサクリン</a>
+                    <a href="./katudou/index.html#sakura">＋さくらとサクリン</a>
                   </font>
                 </p>
               </td>
