--- a/info/index.html
+++ b/info/index.html
@@ -71,7 +71,7 @@
 
 
                 <!-- tab3 -->
-                <a href="../katudou.html">
+                <a href="../katudou/index.html">
                     <img border="0" src="../assets/homepage/katudou.png" width="53" height="27" alt="活動" hspace="25">
                 </a>
 
@@ -189,19 +189,19 @@
                             <td>
                                 <p>
                                     <font size="-2">
-                                        <a href="../katudou/kazenoyouni.html">＋風のように</a>
+                                        <a href="../katudou/index.html#kazenoyouni">＋風のように</a>
                                         <br>
-                                        <a href="../katudou/daruma.html">＋だるまちゃんシリーズ</a>
+                                        <a href="../katudou/index.html#daruma">＋だるまちゃんシリーズ</a>
                                         <br>
-                                        <a href="../katudou/fuitin.html">＋フイチンさん</a>
+                                        <a href="../katudou/index.html#fuitin">＋フイチンさん</a>
                                         <br>
-                                        <a href="../katudou/charadoku.html">＋キャラ丸くんとドク丸くん</a>
+                                        <a href="../katudou/index.html#charadoku">＋キャラ丸くんとドク丸くん</a>
                                         <br>
-                                        <a href="../katudou/kappa.html">＋かっぱのすりばち</a>
+                                        <a href="../katudou/index.html#kappa">＋かっぱのすりばち</a>
                                         <br>
-                                        <a href="../katudou/kurumi.html">＋くるくるクルミちゃん</a>
+                                        <a href="../katudou/index.html#kurumi">＋くるくるクルミちゃん</a>
                                         <br>
-                                        <a href="../katudou/sakura.html">＋さくらとサクリン</a>
+                                        <a href="../katudou/index.html#sakura">＋さくらとサクリン</a>
                                     </font>
                                 </p>
                             </td>
