--- a/info/newsbacknamber.html
+++ b/info/newsbacknamber.html
@@ -23,7 +23,7 @@
         <br>
         <a href="../saiyou.html" target="_parent">採用</a>を更新しました。
         <br> 活動「
-        <a href="../katudou/movie.html" target="_parent">無料出張上映会</a>」を更新しました。</p>
+        <a href="../katudou/index.html#movie" target="_parent">無料出張上映会</a>」を更新しました。</p>
 
 
     <hr>
@@ -38,7 +38,7 @@
     <p>
         <span>6月16日</span>
         <br> 「
-        <a href="../katudou/kazenoyouni.html" target="_parent">風のように</a>」を更新しました。
+        <a href="../katudou/index.html#kazenoyouni" target="_parent">風のように</a>」を更新しました。
         <br>
         <a href="../index.html" target="_parent">トップページ</a>を更新しました。</p>
 
@@ -47,11 +47,11 @@
     <p>
         <span>5月11日</span>
         <br> 「
-        <a href="../katudou/anime.html" target="_parent">アニメで世界にアピール</a>」を更新しました。
+        <a href="../katudou/index.html#anime" target="_parent">アニメで世界にアピール</a>」を更新しました。
         <br>
         <a href="http://tcc.nifty.com/cs/catalog/tcc_schedule/catalog_160417205203_1.htm" target="new">松本かつぢトークイベント</a>の情報を公開しました。
         <br> 「
-        <a href="../katudou/gomi.html" target="_parent">ゴミ拾い</a>」を追加しました。
+        <a href="../katudou/index.html#gomi" target="_parent">ゴミ拾い</a>」を追加しました。
         <br> サイトデザインを変更しました。
     </p>
 
@@ -60,28 +60,28 @@
     <p>
         <span>5月9日</span>
         <br> 「
-        <a href="../katudou/kazenoyouni.html" target="_parent">風のように</a>」を更新しました。
+        <a href="../katudou/index.html#kazenoyouni" target="_parent">風のように</a>」を更新しました。
         <br> 「
-        <a href="../katudou/kurumi.html" target="_parent">くるくるクルミちゃん</a>」を追加しました。</p>
+        <a href="../katudou/index.html#kurumi" target="_parent">くるくるクルミちゃん</a>」を追加しました。</p>
 
     <hr>
 
     <p>
         <span>4月13日</span>
         <br> 「
-        <a href="../katudou/kazenoyouni.html" target="_parent">風のように</a>」主題歌入り予告を公開しました。</p>
+        <a href="../katudou/index.html#kazenoyouni" target="_parent">風のように</a>」主題歌入り予告を公開しました。</p>
 
     <p>
         <span>3月7日</span>
         <br> 「
-        <a href="../katudou/kazenoyouni.html" target="_parent">風のように</a>」ちばてつやさんのインタビュー動画を公開しました。</p>
+        <a href="../katudou/index.html#kazenoyouni" target="_parent">風のように</a>」ちばてつやさんのインタビュー動画を公開しました。</p>
 
     <hr>
 
     <p>
         <span>3月7日</span>
         <br> 「
-        <a href="../katudou/kazenoyouni.html">風のように</a>」のキャストを公開しました。</p>
+        <a href="../katudou/index.html#kazenoyouni">風のように</a>」のキャストを公開しました。</p>
 
     <hr>
 
