--- a/info/sitemap.html
+++ b/info/sitemap.html
@@ -64,7 +64,7 @@
                     <h2>活動</h2>
                     <ul>
                         <li>
-                            <a href="../katudou.html" target="_parent">
+                            <a href="../katudou/index.html" target="_parent">
                                 <p3>エクラアニマルの活動</p3>
                             </a>
                         </li>
@@ -73,42 +73,42 @@
                         </li>
                         <ul>
                             <li>
-                                <a href="../katudou/daruma.html" target="_parent">
+                                <a href="../katudou/index.html#daruma" target="_parent">
                                     <p3>だるまちゃんシリーズ</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/charadoku.html" target="_parent">
+                                <a href="../katudou/index.html#charadoku" target="_parent">
                                     <p3>キャラ丸くんとドク丸くん</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/fuitin.html" target="_parent">
+                                <a href="../katudou/index.html#fuitin" target="_parent">
                                     <p3>フイチンさん</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/kappa.html" target="_parent">
+                                <a href="../katudou/index.html#kappa" target="_parent">
                                     <p3>かっぱのすりばち</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/sakura.html" target="_parent">
+                                <a href="../katudou/index.html#sakura" target="_parent">
                                     <p3>さくらとサクリン</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/kurumi.html" target="_parent">
+                                <a href="../katudou/index.html#kurumi" target="_parent">
                                     <p3>くるくるクルミちゃん</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/kazenoyouni.html" target="_parent">
+                                <a href="../katudou/index.html#kazenoyouni" target="_parent">
                                     <p3>風のように</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/sakuhinetc.html" target="_parent">
+                                <a href="../katudou/index.html#sakuhinetc" target="_parent">
                                     <p3>その他</p3>
                                 </a>
                             </li>
@@ -118,32 +118,32 @@
                         </li>
                         <ul>
                             <li>
-                                <a href="../katudou/movie.html" target="_parent">
+                                <a href="../katudou/index.html#movie" target="_parent">
                                     <p3>無料出張上映会</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/charago.html" target="_parent">
+                                <a href="../katudou/index.html#charago" target="_parent">
                                     <p3>キャラ丸くんが行く！</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/eco.html" target="_parent">
+                                <a href="../katudou/index.html#eco" target="_parent">
                                     <p3>エコキャップ回収</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/gomi.html" target="_parent">
+                                <a href="../katudou/index.html#gomi" target="_parent">
                                     <p3>ゴミ拾い</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/anime.html" target="_parent">
+                                <a href="../katudou/index.html#anime" target="_parent">
                                     <p3>アニメで世界にアピール</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/katudouetc.html" target="_parent">
+                                <a href="../katudou/index.html#katudouetc" target="_parent">
                                     <p3>その他</p3>
                                 </a>
                             </li>
@@ -153,27 +153,27 @@
                         </li>
                         <ul>
                             <li>
-                                <a href="../katudou/kako.html" target="_parent">
+                                <a href="../katudou/index.html#kako" target="_parent">
                                     <p3>活動記録一覧</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/110103.html" target="_parent">
+                                <a href="../katudou/index.html#110103" target="_parent">
                                     <p3>2011年 1〜3月</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/110103.html" target="_parent">
+                                <a href="../katudou/index.html#110103" target="_parent">
                                     <p3>2010年 10〜12月</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/100709.html" target="_parent">
+                                <a href="../katudou/index.html#100709" target="_parent">
                                     <p3>2010年 7〜9月</p3>
                                 </a>
                             </li>
                             <li>
-                                <a href="../katudou/100305.html" target="_parent">
+                                <a href="../katudou/index.html#100305" target="_parent">
                                     <p3>2010年 3〜5月</p3>
                                 </a>
                             </li>
