--- a/info/index.html
+++ b/info/index.html
@@ -19,7 +19,7 @@
        }
        function updateContent() {
            var content = document.getElementById('content')
-           
+
            content.src=window.location.hash ? './info/' + window.location.hash.replace('#', '') + '.html': './info/info.html'
            content.height = map[window.location.hash.replace('#', '')]
        }
@@ -37,8 +37,7 @@
                         <td width="540" height="103" align="left" valign="top">
                             <div class="ekuralogo">
                                 <a href="../index.html">
-                                    <img src="../assets/homepage/ekuraaruki.gif" width="40" height="50" alt="エクラちゃん">
-                                    <img src="../assets/homepage/ekuraanimal_2.png" width="224" height="50" alt="アニメ制作会社エクラアニマル">
+                                    <img src="./assets/homepage/WechatIMG355.png" width="50" height="50" alt="アニメ制作会社エクラアニマル">
                                 </a>
                             </div>
                         </td>
