--- a/info/info.html
+++ b/info/info.html
@@ -53,7 +53,12 @@
     <br>
 
     <center>
-        <img src="../assets/homepage/adderss.png" width="200" height="134" alt="エクラアニマル連絡先　メールアドレス　電話番号　FAX番号　住所">
+        <div style="width: 200px; height: 134px;text-align: left">
+                  <span style="display: inline-block;font-size: 13px;">天津市自贸试验区熙元广场1-2012</span>
+                  <span style="display: inline-block;font-size: 13px;"><span style="font-size: 15px;">TEL&nbsp;&nbsp;</span>18222177796（中国） 81+09098422118（日本）</span>
+                  <span style="display: inline-block;font-size: 13px;"><span style="font-size: 15px;">FAX&nbsp;&nbsp;</span>81-0424615301（日本）</span>
+                  <span style="display: inline-block;font-size: 13px;"><span style="font-size: 15px;">EMAIL&nbsp;&nbsp;</span>zuozuo_0101@126.com（中国） zuozuo0101@gmail.com（日本）</span>
+              </div>
 
         <p>受付時間／平日〜土曜日 10:00〜19:30
         </p>
