--- a/saiyou/index.html
+++ b/saiyou/index.html
@@ -41,23 +41,31 @@
 
                 <!-- tab1 -->
                 <a href="../index.html">
-                    <img border="0" src="../assets/homepage/home.png" width="79" height="28" alt="ホーム" hspace="25">
+                    <div style="width: 112px; height: 28px;display: inline-block;">
+                        <span style="font-size: 23px;font-weight: 600;">首页</span>
+                    </div>
                 </a>
 
                 <!-- tab2 -->
                 <a href="../info/index.html">
-                    <img border="0" src="../assets/homepage/info.png" width="114" height="29" alt="会社案内" hspace="25">
+                    <div style="width: 161px; height: 29px;display: inline-block;">
+                        <span style="font-size: 23px;font-weight: 600;">公司介绍</span>
+                    </div>
                 </a>
 
 
                 <!-- tab3 -->
                 <a href="../katudou/index.html">
-                    <img border="0" src="../assets/homepage/katudou.png" width="53" height="27" alt="活動" hspace="25">
+                    <div style="width: 120px; height: 27px;display: inline-block;">
+                        <span style="font-size: 23px;font-weight: 600;">活动</span>
+                    </div>
                 </a>
 
                 <!-- tab4 -->
                 <a href="../saiyou.html">
-                    <img border="0" src="../assets/homepage/saiyou.png" width="55" height="26" alt="採用" hspace="25">
+                    <div style="width: 118px; height: 26px;display: inline-block;">
+                        <span style="font-size: 23px;font-weight: 600;">招聘</span>
+                    </div>
                 </a>
             </center>
         </div>
