--- a/info/index.html
+++ b/info/index.html
@@ -6,24 +6,29 @@
     <title>title</title>
 
     <link href="../theme/info.css" rel="stylesheet" type="text/css">
+    <script src="./src/jquery.min.js"></script>
     <script>
-       var map = {
-           onigiri: 2050,
-           '': 1305,
-           staff: 1385,
-           link: 1314,
-           newsbacknamber: 1897,
-           access: 962,
-           contact: 620,
-           sitemap: 912
-       }
-       function updateContent() {
-           var content = document.getElementById('content')
-
-           content.src=window.location.hash ? './info/' + window.location.hash.replace('#', '') + '.html': './info/info.html'
-           content.height = map[window.location.hash.replace('#', '')]
-       }
-       window.onhashchange = window.onload = updateContent
+        var host = ''
+       $(function() {
+           $.ajax({url: host + '/api/company', success: function(res) {
+               if (res.statusNo === 1) {
+                    var html = ''
+                   for (var i = 0; i < res.data.length; i++) {
+                       var v = res.data[i]
+                       html += '<li style="cursor: pointer"><a>' + v.title + '</a></li>'
+                       if (i === 0 ) {
+                           $('#content').html(v.content)
+                       }
+                   }
+                    $('#sidemenu ul').html(html);
+                    $('#sidemenu ul li').each(function(k, v) {
+                        $(this).on('click', function() {
+                            $('#content').html(res.data[k].content)
+                        })
+                    })
+               }
+           }})
+       })
     </script>
 </head>
 
@@ -60,23 +65,31 @@
 
                 <!-- tab1 -->
                 <a href="../index.html">
-                    <img border="0" src="../assets/homepage/home.png" width="79" height="28" alt="ホーム" hspace="25">
+                    <div style="width: 112px; height: 28px;display: inline-block;">
+                        <span style="font-size: 23px;font-weight: 600;">首页</span>
+                    </div>
                 </a>
 
                 <!-- tab2 -->
                 <a href="../info/index.html">
-                    <img border="0" src="../assets/homepage/info.png" width="114" height="29" alt="会社案内" hspace="25">
+                    <div style="width: 161px; height: 29px;display: inline-block;">
+                        <span style="font-size: 23px;font-weight: 600;">公司介绍</span>
+                    </div>
                 </a>
 
 
                 <!-- tab3 -->
                 <a href="../katudou/index.html">
-                    <img border="0" src="../assets/homepage/katudou.png" width="53" height="27" alt="活動" hspace="25">
+                    <div style="width: 120px; height: 27px;display: inline-block;">
+                        <span style="font-size: 23px;font-weight: 600;">活动</span>
+                    </div>
                 </a>
 
                 <!-- tab4 -->
                 <a href="../saiyou.html">
-                    <img border="0" src="../assets/homepage/saiyou.png" width="55" height="26" alt="採用" hspace="25">
+                    <div style="width: 118px; height: 26px;display: inline-block;">
+                        <span style="font-size: 23px;font-weight: 600;">招聘</span>
+                    </div>
                 </a>
             </center>
         </div>
@@ -97,30 +110,6 @@
 
                         <div id="sidemenu">
                             <ul>
-                                <li>
-                                    <a href="../info/index.html">エクラアニマルとは</a>
-                                </li>
-                                <li>
-                                    <a href="#onigiri">自主制作にこだわるわけ</a>
-                                </li>
-                                <li>
-                                    <a href="#staff">スタッフ紹介</a>
-                                </li>
-                                <li>
-                                    <a href="#link">リンク</a>
-                                </li>
-                                <li>
-                                    <a href="#newsbacknamber">おしらせバックナンバー</a>
-                                </li>
-                                <li>
-                                    <a href="#access">アクセスマップ</a>
-                                </li>
-                                <li>
-                                    <a href="#contact">お問い合わせ</a>
-                                </li>
-                                <li>
-                                    <a href="#sitemap">サイトマップ</a>
-                                </li>
                             </ul>
                         </div>
 
@@ -130,8 +119,8 @@
 
                     </td>
                     <td align="left" valign="top">
-                        <iframe id="content" width="528" height="1305" scrolling="no" frameborder="0">
-                        </iframe>
+                        <div id="content">
+                        </div>
                     </td>
                 </tr>
             </tbody>
