--- a/info/index.html
+++ b/info/index.html
@@ -8,7 +8,7 @@
     <link href="../theme/info.css" rel="stylesheet" type="text/css">
     <script src="./src/jquery.min.js"></script>
     <script>
-        var host = ''
+        var host = 'http://39.106.187.16:8000'
        $(function() {
            $.ajax({url: host + '/api/company', success: function(res) {
                if (res.statusNo === 1) {
